postgres/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: postgresql
  labels:
    app: postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
    io.kompose.service: postgres
status:
  loadBalancer: {}
